Fix section vertical spacing (#976)
* Fix rich text margins for bg-1

* Remove section level spacing CSS

* Update and clean up spacing naming conventions

* Clean up

* Fix spacing for special consecutive sections with no heading

* Remove comment

* Update collapse grid naming

* Update behaviour of special collapsing sections

* Fix bugs

* Remove product-grip bottom margin

* Adjust setting range. Set image-with-text as collapsible section

* Update from Shopify for theme dawn/fix-section-vertical-spacing

Committed from shop: OS 2.0

* Revert "Update from Shopify for theme dawn/fix-section-vertical-spacing"

This reverts commit a0771e57ae4c697a101d6fc45092e0b112f64ccd.

* Adapt consistent spacing for all sections. Remove special cases

* Revert usage of section spacing for elements other than sections

* Edit settings names and order for spacing. Add mobile vertical section spacing setting

* Revert value for margin-bottom

* Revert additional padding

* Revert additional padding

* Revert heading logic

* Revert heading logic

* Revert heading logic

* Address feedback

* Update config/settings_schema.json


* Update config/settings_schema.json


* Update config/settings_schema.json


* Update config/settings_schema.json


* Update config/settings_schema.json


* Update config/settings_schema.json


* Update config/settings_schema.json


* Update config/settings_schema.json


* Update config/settings_schema.json


* Update config/settings_schema.json


* Update config/settings_schema.json

--- a/assets/base.css
+++ b/assets/base.css
@@ -218,42 +218,24 @@ html.no-js .no-js-hidden {
   }
 }
 
-.element-margin {
-  margin-top: var(--sections-spacing);
+.section + .section {
+  margin-top: var(--spacing-sections-mobile);
 }
 
-.spaced-section {
-  margin-top: var(--sections-spacing);
+@media screen and (min-width: 750px) {
+  .section + .section {
+    margin-top: var(--spacing-sections-desktop);
+  }
 }
 
-.spaced-section:last-child {
-  margin-bottom: var(--sections-safe-spacing);
+.element-margin-top {
+  margin-top: 5rem;
 }
 
 @media screen and (min-width: 750px) {
   .element-margin {
-    margin-top: var(--sections-spacing);
+    margin-top: calc(5rem + var(--page-width-margin));
   }
-
-  .spaced-section {
-    margin-top: var(--sections-spacing);
-  }
-
-  .spaced-section:last-child {
-    margin-bottom: var(--sections-spacing);
-  }
-}
-
-.spaced-section--full-width + .spaced-section--full-width {
-  margin-top: 0;
-}
-
-.spaced-section--full-width:first-child {
-  margin-top: 0;
-}
-
-.spaced-section--full-width:last-child {
-  margin-bottom: 0;
 }
 
 body,
@@ -268,13 +250,14 @@ body,
 
 .background-secondary {
   background-color: rgba(var(--color-foreground), 0.04);
-  padding: 4rem 0 5rem;
+  padding-top: 4rem;
+  padding-bottom: 5rem;
 }
 
 @media screen and (min-width: 750px) {
   .background-secondary {
-    padding: calc(6rem + var(--page-width-margin)) 0
-      calc(5rem + var(--page-width-margin));
+    padding-top: calc(6rem + var(--page-width-margin));
+    padding-bottom: calc(5rem + var(--page-width-margin));
   }
 }
 
@@ -865,7 +848,7 @@ summary::-webkit-details-marker {
   justify-content: space-between;
   align-items: flex-end;
   gap: 1rem;
-  margin: var(--sections-safe-spacing) 0 3rem;
+  margin-bottom: 3rem;
   flex-wrap: wrap;
 }
 
@@ -889,7 +872,7 @@ summary::-webkit-details-marker {
 @media screen and (min-width: 990px) {
   .title,
   .title-wrapper-with-link {
-    margin: var(--sections-safe-spacing) 0 3rem;
+    margin: 5rem 0 3rem;
   }
 
   .title--primary {
